# cgstewart-django

./: README.md  cookies.txt  pnpm-lock.yaml
apps/api/: .env.example  .gitignore  CI_CD_PIPELINE.md  Dockerfile  buildspec.yml  check_uploads.py  db.sqlite3  deploy.sh  manage_dynamo.py  package.json  pyproject.toml  requirements.txt  start.sh  vercel.json
apps/api/blog/: admin.py  dynamo_config.py  models.py  pynamo_models.py  serializers.py  urls.py  utils.py  views.py
apps/api/blog/management/commands/: create_admin_user.py
apps/api/blog/migrations/: 0001_initial.py  0002_remove_bio_resume_url_bio_resume.py  0003_remove_bio_social_links_bio_github_url_and_more.py
apps/api/config/: settings.py  urls.py  wsgi.py
apps/api/infrastructure/: Pulumi.production.yaml  Pulumi.yaml  __main__.py  requirements.txt
apps/web/: .env.example  next.config.mjs  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/posts/: page.tsx
apps/web/app/posts/[slug]/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/projects/[slug]/: page.tsx
apps/web/app/videos/: page.tsx
apps/web/app/videos/[slug]/: page.tsx
apps/web/components/: animated-element.tsx  bio.tsx  navbar.tsx  post-detail.tsx  posts-list.tsx  projects-list.tsx  providers.tsx  videos-list.tsx
apps/web/lib/: api.ts  hooks.ts  types.ts
